--- a/Guias dps/guia 1/primeraversion.html
+++ b/Guias dps/guia 1/primeraversion.html
@@ -11,9 +11,9 @@
         equipo de manera inteligente y rápida y por trabajo nos referimos a algún software
         o página que implique código el cual necesitemos hacerlo con un grupo de
         personas”</p>
-    <p>“Los Sistemas de Control de Versiones Distribuidos (DVCS) salvan este problema.
-        Algunos ejemplos de sistemas distribuidos, aparte de Git, son Mercurial, Bazaar o
-        Darcs. En este tipo de herramientas, los clientes replican completamente el
-        repositorio.”</p>
+    <p>“El 4 de junio de 2018, Microsoft compró GitHub por la cantidad de 7500 millones de dólares, 
+        este cambio de propietarios provocó la salida de varios proyectos desde este repositorio 
+        debido la posibilidad de acceso a códigos fuentes por parte de una compañía que sus negocios 
+        es el software”</p>
 </body>
 </html>
