--- a/Guias dps/guia 1/primeraversion.html
+++ b/Guias dps/guia 1/primeraversion.html
@@ -14,6 +14,6 @@
     <p>“Los Sistemas de Control de Versiones Distribuidos (DVCS) salvan este problema.
         Algunos ejemplos de sistemas distribuidos, aparte de Git, son Mercurial, Bazaar o
         Darcs. En este tipo de herramientas, los clientes replican completamente el
-        repositorio.”</p>
+        repositorio.”xs</p>
 </body>
 </html>
