cambios oscar ardon

--- a/Guias dps/guia 1/primeraversion.html
+++ b/Guias dps/guia 1/primeraversion.html
@@ -11,10 +11,7 @@
         equipo de manera inteligente y rápida y por trabajo nos referimos a algún software
         o página que implique código el cual necesitemos hacerlo con un grupo de
         personas”</p>
-    <p>“El 28 de junio de 2018, Microsoft compró GitHub por la cantidad de 7500 millones de dólares, 
-        este cambio de propietarios provocó la salida de varios proyectos desde este repositorio 
-        debido la posibilidad de acceso a códigos fuentes por parte de una compañía que sus negocios 
-        es el software”</p>
+    <p>El pana miguel</p>
     
     
 </body>
