--- a/Guias dps/guia 1/primeraversion.html
+++ b/Guias dps/guia 1/primeraversion.html
@@ -12,7 +12,7 @@
         o página que implique código el cual necesitemos hacerlo con un grupo de
         personas”</p>
 
-    <p>El pana miguel programador</p>    
+    <p>El pana miguel programador xddddddd</p>    
     
 </body>
 </html>
